Adicionado a atualização do genero e documentação
